[package]
name = "reservoir"
version = "0.1.0"
edition = "2021"

[features]
default = []
io_uring = []

[dependencies]
async-trait = "0.1"
crc32fast = "1.2"
event-listener = "4.0"
flume = "0.11"
futures-util = "0.3"
range-alloc = "0.1"
tokio = { version = "1.34", features = ["rt", "io-util", "time"] }
thiserror = "1.0"
tracing = "0.1"
log = "0.4.20"

[target.'cfg(target_os = "linux")'.dependencies]
glommio = "0.8"

[dev-dependencies]
tokio = { version = "1.34", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
