[package]
name = "reservoir-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
reservoir = { version = "0.1.0", path = "../reservoir" }
tokio = { version = "1.35", features = ["rt", "io-util", "time"] }
tracing = "0.1"
tracing-subscriber = "0.3"
